tests/baselines/reference/interfaceWithPropertyThatIsPrivateInBaseType2.errors.txt
interfaceWithPropertyThatIsPrivateInBaseType2.ts(5,11): error TS2430: Interface 'Foo' incorrectly extends interface 'Base'.
  Property 'x' is private in type 'Base' but not in type 'Foo'.
interfaceWithPropertyThatIsPrivateInBaseType2.ts(13,11): error TS2430: Interface 'Foo2<T>' incorrectly extends interface 'Base2<T>'.
  Property 'x' is private in type 'Base2<T>' but not in type 'Foo2<T>'.


==== interfaceWithPropertyThatIsPrivateInBaseType2.ts (2 errors) ====
    class Base {
        private x() {}
    }
    
    interface Foo extends Base { // error
              ~~~
!!! error TS2430: Interface 'Foo' incorrectly extends interface 'Base'.
!!! error TS2430:   Property 'x' is private in type 'Base' but not in type 'Foo'.
        x(): any;
    }
    
    class Base2<T> {
        private x() { }
    }
    
    interface Foo2<T> extends Base2<T> { // error
              ~~~~
!!! error TS2430: Interface 'Foo2<T>' incorrectly extends interface 'Base2<T>'.
!!! error TS2430:   Property 'x' is private in type 'Base2<T>' but not in type 'Foo2<T>'.
        x(): any;
    }